deploy/03-ms-central.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-central
  namespace: conjunta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-central
  template:
    metadata:
      labels:
        app: ms-central
    spec:
      containers:
      - name: ms-central
        image: diegocasignia/ms-central:1.0.0
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: ms-central-service
  namespace: conjunta
spec:
  selector:
    app: ms-central
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
