deploy/04-ms-inventario.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-inventario
  namespace: conjunta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-inventario
  template:
    metadata:
      labels:
        app: ms-inventario
    spec:
      containers:
      - name: ms-inventario
        image: diegocasignia/ms-inventario:1.0.0
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: ms-inventario-service
  namespace: conjunta
spec:
  selector:
    app: ms-inventario
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
