deploy/05-ms-facturacion.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-facturacion
  namespace: conjunta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-facturacion
  template:
    metadata:
      labels:
        app: ms-facturacion
    spec:
      containers:
      - name: ms-facturacion
        image: diegocasignia/ms-facturacion:1.0.0
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: ms-facturacion-service
  namespace: conjunta
spec:
  selector:
    app: ms-facturacion
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
